--- a/src/components/all-sensor-data/graphs/Graphs.module.css
+++ b/src/components/all-sensor-data/graphs/Graphs.module.css
@@ -1,7 +1,7 @@
 .graphsContainer {
   display: flex;
   flex-direction: column;
-  width: fit-content;
-  height: fit-content;
+  height: 1600px;
+  width: auto;
   font-size: 1.3rem;
 }
