--- a/src/components/all-sensor-data/graphs/Graphs.module.css
+++ b/src/components/all-sensor-data/graphs/Graphs.module.css
@@ -1,14 +1,18 @@
 .graphsContainer {
   display: flex;
   flex-direction: column;
-  height: 1400px;
+  height: 1100px;
   width: auto;
   font-size: 1.3rem;
-  padding-left: 50px;
+  margin-top:25px;
+  margin-right: 30px;
 }
 
-@media only screen and (max-width:815px){
+@media only screen and (max-width:650px){
   .graphsContainer{
+    overflow-x:scroll;
+    overflow-y:hidden;
+    margin-right:2px;
     padding-left: 20px;
   }
 }
