--- a/src/pages/LiveFeed.module.css
+++ b/src/pages/LiveFeed.module.css
@@ -1,7 +1,7 @@
 .main {
-  min-height: 80vh;
+  min-height: 85vh;
   display: flex;
-  /* align-items: right; */
+  align-items: center;
   flex-direction: column;
   max-width: 95vw;
 }
